# sustainability-measurement-agent

./: .gitignore  Pipfile  Readme.md  __main__.py  cluema.py  example.ipynb  main.py  main_fancy.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
cli/: main.py
deployment/kepler/: deploy.json
deployment/kuberntes/: deploy.json
docs/: Troubleshooting.md  kind.md  lifecycle.drawio  report_organization.md
docs/kind-deployment/: README.md  kind-setup.sh  locustfile.py  sma-kind-demo.yml
examples/: kind.yml  measurment.yaml  minimal.yml
modules/PrometheusEnvironmentExporter/: collector.py  enviroment.py  io.py  main.py  model.py  prepared_queries.py
modules/telelocust/: client.py  main.py  telelocust-deployment.yaml  telelocust_deployer.py
modules/telelocust/tests/: test_main.py
sma/: __init__.py  config.py  enviroment.py  log.py  model.py  observations.py  prepared_queries.py  prometheus.py  report.py  sma.py  utils.py
sustainability_measurement_agent.egg-info/: PKG-INFO  requires.txt
telelocust/: locust-deployment.yaml
