[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["sma", "modules", "cli"]

[tool.setuptools.package-data]
"modules.telelocust" = ["*.yaml"]

[project]
name = "sustainability-measurement-agent"
version = "0.2.1"
description = "Sustainability Measurement Agent - A tool for collecting and analyzing sustainability metrics in cloud native enviroments."
authors = [
    { name = "Sebastian Werner", email = "werner@tu-berlin.de" },
    { name = "Karl Wolf", email = "k.wolf@tu-berlin.de" },
    { name = "ISE TU Berlin"}
]
readme = { file = "Readme.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["sustainability", "measurements", "agent"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = ["kubernetes", "pyyaml", "pandas>=2.3.0", "requests", "click", "rich"]

[project.scripts]
sma = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/ISE-TU-Berlin/sustainability-measurement-agent"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-kubernetes>=0.3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests requiring K8s cluster (deselect with '-m \"not integration\"')",
]

